Use embedded mode for SQ Runner and fix compatibility with Gradle 1.12